fix files for beta
fix beta

--- a/locales/de.json
+++ b/locales/de.json
@@ -9,12 +9,12 @@
     "invalid_regions": "❌ Ungültige Regionen. Verfügbare: {regions}",
     "invalid_ids": "❌ Ungültige IDs angegeben",
     "no_permission": "❌ Keine Berechtigung",
-    "deleted_success": "🗑️ Gelöscht: {ids}",
+    "deleted_success": "🗑️ Gelöscht:{ids}",
     "delete_error": "❌ Fehler beim Löschen",
-    "stats_message": "📊 **Statistiken**\n🔄 Aktiv: {active}\n✅ Abgeschlossen: {completed}\n⏳ Abgelaufen: {expired\\n🗑️ Gelöscht: {deleted_total}\n\n🏆 **Top-Arten**\n{top_species}",
+    "stats_message": "📊 **Statistiken**\n🔄 Aktiv: {active}\n✅ Abgeschlossen: {completed}\n⏳ Abgelaufen: {expired}\n🗑️ Gelöscht: {deleted_total}\n\n🏆 **Top-Arten**\n{top_species}",
     "stats_error": "❌ Fehler beim Laden der Statistiken",
     "stats_db_error": "🔧 Datenbankfehler bei der Statistikerstellung",
-    "no_data": "Keine Daten verfügbar",
+    "no_data": "❌ Keine Daten verfügbar",
     "history_no_entries": "❌ Keine vergangenen Benachrichtigungen gefunden",
     "history_header": "📜 Deine Historie:",
     "history_completed": "✅ Abgeschlossen:",
@@ -22,7 +22,7 @@
     "history_active": "🔄 Aktiv:",
     "history_other": "❓ Sonstige:",
     "history_more_entries": "...und {count} weitere",
-    "system_status": "**🤖 Bot-Status**\nUptime: {uptime}\n\n**🔍 Datenbankstatus:** {integrity}\nGesamte Benachrichtigungen: {total}\n\n**📂 Shop-Daten:**\n{file_status}",
+    "system_status": "**🤖 Bot-Status**\nUptime: {uptime} \n\n**🔍 Datenbankstatus:** {integrity} \nGesamte Benachrichtigungen: {total} \n\n**📂 Shop-Daten:**\n {file_status}",
     "system_file_status": "🔄 Datei zuletzt aktualisiert: {modified} (vor {age})",
     "system_file_missing": "❌ Datei nicht gefunden",
     "system_error": "❌ Fehler beim Abrufen des Status",
@@ -39,6 +39,6 @@
     "testnotification_dm": "📨 Testnachricht erfolgreich!",
     "testnotification_forbidden": "❌ Konnte keine PN senden – bitte Privatnachrichten aktivieren",
     "availability_header": "🔔 **Verfügbarkeitsalarm** für {species}!",
-    "availability_entry": "**Shop:** {shop}\n**Preisspanne:** {min_price}-{max_price}{currency}\n[Produktlink]({product_url}) | [Shop-Startseite]({shop_url})",
+    "availability_entry": "🏪 **Shop:** {shop} \n💶 **Preisspanne:** {min_price}-{max_price}{currency} \n🔗 [Produktlink](<{product_url}>) | 🏠 [Shop-Startseite](<{shop_url}>)",
     "general_error": "❌ Ein Fehler ist aufgetreten"
 }
