--- a/locales/en.json
+++ b/locales/en.json
@@ -1,44 +1,44 @@
 {
-    "server_setup_success": "✅ Server setup complete! Commands only accepted in {channel}.",
-    "user_setting_success": "✅ Language preference saved.",
-    "wrong_channel": "❌ Command only allowed in configured channel.",
-    "notification_set": "🔔 Notification set for {species} in {regions}",
-    "notification_set_forced": "⚠️ Notification set for {species} (force mode)",
-    "notification_exists": "❌ Notification already exists",
+    "server_setup_success": "✅ Server successfully set up! All commands are only accepted in {channel}.",
+    "user_setting_success": "✅ Your language setting has been saved.",
+    "wrong_channel": "❌ This command is only allowed in the configured channel.",
+    "notification_set": "🔔 Notification for {species} in {regions} set up",
+    "notification_set_forced": "⚠️ Notification for {species} (force mode) set up",
+    "notification_exists": "❌ This notification already exists",
     "species_not_found": "❌ Species not found",
     "invalid_regions": "❌ Invalid regions. Available: {regions}",
     "invalid_ids": "❌ Invalid IDs provided",
     "no_permission": "❌ No permission",
     "deleted_success": "🗑️ Deleted: {ids}",
-    "delete_error": "❌ Error during deletion",
-    "stats_message":"📊 **Statistics**\n🔄 Active: {active}\n✅ Completed: {completed}\n⏳ Expired: {expired}\n🗑️ Deleted: {deleted_total}\n\n🏆 **Top Species**\n{top_species}",
+    "delete_error": "❌ Error while deleting",
+    "stats_message": "📊 **Statistics**\n🔄 Active: {active}\n✅ Completed: {completed}\n⏳ Expired: {expired}\n🗑️ Deleted: {deleted_total}\n\n🏆 **Top Species**\n{top_species}",
     "stats_error": "❌ Error loading statistics",
     "stats_db_error": "🔧 Database error while generating statistics",
-    "no_data": "No data available",
+    "no_data": "❌ No data available",
     "history_no_entries": "❌ No past notifications found",
-    "history_header": "📜 Your History:",
+    "history_header": "📜 Your history:",
     "history_completed": "✅ Completed:",
     "history_expired": "⏳ Expired:",
     "history_active": "🔄 Active:",
     "history_other": "❓ Other:",
     "history_more_entries": "...and {count} more",
-    "system_status": "**🤖 Bot Status**\nUptime: {uptime}\n\n**🔍 Database Status:** {integrity}\nTotal Notifications: {total}\n\n**📂 Shop Data:**\n{file_status}",
-    "system_file_status": "🔄 File last modified: {modified} ({age} ago)",
+    "system_status": "**🤖 Bot Status**\nUptime: {uptime} \n\n**🔍 Database Status:** {integrity} \nTotal notifications: {total} \n\n**📂 Shop Data:**\n {file_status}",
+    "system_file_status": "🔄 File last updated: {modified} (ago: {age})",
     "system_file_missing": "❌ File not found",
     "system_error": "❌ Error retrieving status",
     "help_full": "**📚 Command Overview**\n\n{commands}",
-    "help_notification": "`/notification` - Set up species notification",
-    "help_history": "`/history` - Show notification history",
-    "help_test": "`/testnotification` - Test notifications",
-    "help_delete": "`/delete_notifications` - Delete multiple notifications",
-    "help_stats": "`/stats` - Show statistics (Admin)",
+    "help_notification": "`/notification` - Set up a notification for an ant species",
+    "help_history": "`/history` - Shows your notification history",
+    "help_test": "`/testnotification` - Tests DM notifications",
+    "help_delete": "`/delete_notifications` - Deletes multiple notifications",
+    "help_stats": "`/stats` - Shows statistics (Admin)",
     "help_system": "`/system` - System status (Admin)",
-    "help_startup": "`/startup` – Set language and channel for this server (Admin)",
-    "help_usersetting": "`/usersetting` – Set your personal language preference",
+    "help_startup": "`/startup` – Sets language and channel for this server (Admin)",
+    "help_usersetting": "`/usersetting` – Sets your personal language setting",
     "testnotification_success": "✅ Test message sent!",
     "testnotification_dm": "📨 Test message successful!",
     "testnotification_forbidden": "❌ Could not send DM – please enable private messages",
-    "availability_header": "🔔 **Availability alert** for {species}!",
-    "availability_entry": "**Shop:** {shop}\n**Price range:** {min_price}-{max_price}{currency}\n[Product link]({product_url}) | [Shop homepage]({shop_url})",
+    "availability_header": "🔔 **Availability Alert** for {species}!",
+    "availability_entry": "🏪 **Shop:** {shop} \n💶 **Price range:** {min_price}-{max_price}{currency} \n🔗 [Product link](<{product_url}>) | 🏠 [Shop homepage](<{shop_url}>)",
     "general_error": "❌ An error has occurred"
 }
