--- a/locales/en.json
+++ b/locales/en.json
@@ -22,6 +22,8 @@
     "history_active": "🔄 Active:",
     "history_other": "❓ Other:",
     "history_more_entries": "...and {count} more",
+	"history_entry": "{species} in {regions} (Created: {created}) - [ID: {id}]",
+    "history_entry_completed": "{species} in {regions} (Created: {created} | Notified: {notified}) - [ID: {id}]",
     "system_status": "**🤖 Bot Status**\nUptime: {uptime} \n\n**🔍 Database Status:** {integrity} \nTotal notifications: {total} \n\n**📂 Shop Data:**\n {file_status}",
     "system_file_status": "🔄 File last updated: {modified} (ago: {age})",
     "system_file_missing": "❌ File not found",
