Finale Version 3.0 - neue Funktionen
Update funktionen

--- a/locales/en.json
+++ b/locales/en.json
@@ -25,6 +25,7 @@
 	"history_entry": "{species} in {regions} (Created: {created}) - [ID: {id}]",
     "history_entry_completed": "{species} in {regions} (Created: {created} | Notified: {notified}) - [ID: {id}]",
     "system_status": "**🤖 Bot Status**\nUptime: {uptime} \n\n**🔍 Database Status:** {integrity} \nTotal notifications: {total} \n\n**📂 Shop Data:**\n {file_status}",
+    "system_performance": "**🚀 Performance**\n• ⏳ Latency: `{latency} ms`\n• 🖥️ CPU usage: `{cpu}%`\n• 💾 RAM usage: `{ram}%`\n• 📡 Servers: `{servers}` | 👥 Users: `{users}`\n• ℹ️ System: `{system}`",
     "system_file_status": "🔄 File last updated: {modified} (ago: {age})",
     "system_file_missing": "❌ File not found",
     "system_error": "❌ Error retrieving status",
@@ -36,11 +37,22 @@
     "help_stats": "`/stats` - Shows statistics (Admin)",
     "help_system": "`/system` - System status (Admin)",
     "help_startup": "`/startup` – Sets language and channel for this server (Admin)",
-    "help_usersetting": "`/usersetting` – Sets your personal language setting",
+    "help_usersetting": "`/usersetting` – Manage your personal settings: set your bot reply language, add or remove shops from your blacklist, view your blacklist, and list all available shops.",
     "testnotification_success": "✅ Test message sent!",
     "testnotification_dm": "📨 Test message successful!",
     "testnotification_forbidden": "❌ Could not send DM – please enable private messages",
     "availability_header": "🔔 **Availability Alert** for {species}!",
     "availability_entry": "🏪 **Shop:** {shop} \n💶 **Price range:** {min_price}-{max_price}{currency} \n🔗 [Product link](<{product_url}>) | 🏠 [Shop homepage](<{shop_url}>)",
+	"all_channels": "all channels",
+	"notification_expired_dm": "Your search for {species} ({regions}) has expired and is no longer being monitored. You can create a new notification at any time.",
+	"dm_failed": "I couldn't send you a private message. Please enable your direct messages to receive notifications!",
+	"shop_not_found": "Shop not found!",
+    "blacklist_add_success": "Shop {shop} added to blacklist.",
+    "blacklist_remove_success": "Shop {shop} removed from blacklist.",
+    "blacklist_empty": "Your blacklist is empty.",
+    "blacklist_list": "Blacklisted shops:\n- {shops}",
+	"shop_not_found_suggest": "Shop '{shop}' not found. Did you mean:\n{suggestions}",
+    "shop_not_in_blacklist": "This shop is not in your blacklist",
+    "available_shops": "Available shops:\n- {shops}",
     "general_error": "❌ An error has occurred"
 }
