--- a/locales/eo.json
+++ b/locales/eo.json
@@ -25,6 +25,7 @@
     "history_entry": "{species} en {regions} (Kreita: {created}) - [ID: {id}]",
     "history_entry_completed": "{species} en {regions} (Kreita: {created} | Sciigita: {notified}) - [ID: {id}]",
     "system_status": "**🤖 Bot-stato**\nUptime: {uptime} \n\n**🔍 Datumbaza stato:** {integrity} \nTotalaj sciigoj: {total} \n\n**📂 Butikaj datumoj:**\n {file_status}",
+    "system_performance": "**🚀 Prezentado**\n• ⏳ Latenco: `{latency} ms`\n• 🖥️ CPU-uzado: `{cpu}%`\n• 💾 RAM-uzado: `{ram}%`\n• 📡 Serviloj: `{servers}` | 👥 Uzantoj: `{users}`\n• ℹ️ Sistemo: `{system}`",
     "system_file_status": "🔄 Dosiero laste ĝisdatigita: {modified} (antaŭ {age})",
     "system_file_missing": "❌ Dosiero ne trovita",
     "system_error": "❌ Eraro dum ricevo de stato",
@@ -36,11 +37,22 @@
     "help_stats": "`/stats` - Montras statistikojn (Admin)",
     "help_system": "`/system` - Sistemo-stato (Admin)",
     "help_startup": "`/startup` – Agordas lingvon kaj kanalon por ĉi tiu servilo (Admin)",
-    "help_usersetting": "`/usersetting` – Agordas vian personan lingvon",
+    "help_usersetting": "`/usersetting` – Administru viajn personajn agordojn: elektu la lingvon por bot-respondoj, aldonu aŭ forigu butikojn el via nigralisto, vidu vian nigraliston kaj listigu ĉiujn disponeblajn butikojn.",
     "testnotification_success": "✅ Testmesaĝo sendita!",
     "testnotification_dm": "📨 Testmesaĝo sukcesa!",
     "testnotification_forbidden": "❌ Ne eblis sendi PN – bonvolu aktivigi privatajn mesaĝojn",
     "availability_header": "🔔 **Disponebleca alarmo** por {species}!",
     "availability_entry": "🏪 **Butiko:** {shop} \n💶 **Prezintervalo:** {min_price}-{max_price}{currency} \n🔗 [Produkto-ligilo](<{product_url}>) | 🏠 [Butiko-ĉefpaĝo](<{shop_url}>)",
+    "all_channels": "ĉiuj kanaloj",
+	"notification_expired_dm": "Via serĉo pri {species} ({regions}) eksvalidiĝis kaj ne plu estas kontrolata. Vi povas iam ajn krei novan sciigon.",
+	"dm_failed": "Mi ne povis sendi al vi privatan mesaĝon. Bonvolu ebligi viajn rektajn mesaĝojn por ricevi sciigojn!",
+	"shop_not_found": "Butiko ne trovita!",
+    "blacklist_add_success": "Butiko {shop} aldonita al la nigralisto.",
+    "blacklist_remove_success": "Butiko {shop} forigita el la nigralisto.",
+    "blacklist_empty": "Via nigralisto estas malplena.",
+    "blacklist_list": "Blokitaj butikoj:\n- {shops}",
+	"shop_not_found_suggest": "Butiko '{shop}' ne trovita. Ĉu vi celis:\n{suggestions}",
+    "shop_not_in_blacklist": "Ĉi tiu butiko ne estas en via nigralisto",
+    "available_shops": "Disponiblaj butikoj:\n- {shops}",
     "general_error": "❌ Okazis eraro"
 }
