--- a/locales/de.json
+++ b/locales/de.json
@@ -22,9 +22,10 @@
     "history_active": "🔄 Aktiv:",
     "history_other": "❓ Sonstige:",
     "history_more_entries": "...und {count} weitere",
-	"history_entry": "{species} in {regions} (Erstellt: {created}) - [ID: {id}]",
+    "history_entry": "{species} in {regions} (Erstellt: {created}) - [ID: {id}]",
     "history_entry_completed": "{species} in {regions} (Erstellt: {created} | Benachrichtigt: {notified}) - [ID: {id}]",
     "system_status": "**🤖 Bot-Status**\nUptime: {uptime} \n\n**🔍 Datenbankstatus:** {integrity} \nGesamte Benachrichtigungen: {total} \n\n**📂 Shop-Daten:**\n {file_status}",
+    "system_performance": "**🚀 Performance**\n• ⏳ Latenz: `{latency} ms`\n• 🖥️ CPU-Auslastung: `{cpu}%`\n• 💾 RAM-Auslastung: `{ram}%`\n• 📡 Server: `{servers}` | 👥 Nutzer: `{users}`\n• ℹ️ System: `{system}`",
     "system_file_status": "🔄 Datei zuletzt aktualisiert: {modified} (vor {age})",
     "system_file_missing": "❌ Datei nicht gefunden",
     "system_error": "❌ Fehler beim Abrufen des Status",
@@ -36,11 +37,22 @@
     "help_stats": "`/stats` - Zeigt Statistiken (Admin)",
     "help_system": "`/system` - Systemstatus (Admin)",
     "help_startup": "`/startup` – Setzt Sprache und Kanal für diesen Server (Admin)",
-    "help_usersetting": "`/usersetting` – Setzt deine persönliche Spracheinstellung",
+    "help_usersetting": "`/usersetting` – Verwalte deine persönlichen Einstellungen: Sprache für Bot-Antworten festlegen, Shops auf deine Blacklist setzen oder entfernen, deine Blacklist anzeigen und alle verfügbaren Shops auflisten.",
     "testnotification_success": "✅ Testnachricht gesendet!",
     "testnotification_dm": "📨 Testnachricht erfolgreich!",
     "testnotification_forbidden": "❌ Konnte keine PN senden – bitte Privatnachrichten aktivieren",
     "availability_header": "🔔 **Verfügbarkeitsalarm** für {species}!",
     "availability_entry": "🏪 **Shop:** {shop} \n💶 **Preisspanne:** {min_price}-{max_price}{currency} \n🔗 [Produktlink](<{product_url}>) | 🏠 [Shop-Startseite](<{shop_url}>)",
+    "all_channels": "alle Kanäle",
+	"notification_expired_dm": "Deine Suche nach {species} ({regions}) ist abgelaufen und wird nicht mehr überwacht. Du kannst jederzeit eine neue Benachrichtigung anlegen.",
+	"dm_failed": "Ich konnte dir keine private Nachricht senden. Bitte aktiviere deine Direktnachrichten, damit du Benachrichtigungen erhalten kannst!",
+	"shop_not_found": "Shop nicht gefunden!",
+    "blacklist_add_success": "Shop {shop} wurde zur Blacklist hinzugefügt.",
+    "blacklist_remove_success": "Shop {shop} wurde von der Blacklist entfernt.",
+    "blacklist_empty": "Deine Blacklist ist leer.",
+    "blacklist_list": "Gesperrte Shops:\n- {shops}",
+	"shop_not_found_suggest": "Shop '{shop}' nicht gefunden. Meintest du:\n{suggestions}",
+    "shop_not_in_blacklist": "Dieser Shop befindet sich nicht in deiner Blacklist",
+    "available_shops": "Verfügbare Shops:\n- {shops}",
     "general_error": "❌ Ein Fehler ist aufgetreten"
 }
