Sprachen files updaten

--- a/locales/de.json
+++ b/locales/de.json
@@ -5,8 +5,8 @@
     "notification_set": "🔔 Benachrichtigung für {species} in {regions} eingerichtet",
     "notification_set_forced": "⚠️ Benachrichtigung für {species} (Force-Modus) eingerichtet",
     "notification_exists": "❌ Diese Benachrichtigung existiert bereits",
-	"notification_exists_active": "❌ Du hast bereits eine aktive Benachrichtigung für {species} in {regions}",
-	"notification_reactivated": "🔄 Die Benachrichtigung für {species} in {regions} wurde reaktiviert",
+    "notification_exists_active": "❌ Du hast bereits eine aktive Benachrichtigung für {species} in {regions}",
+    "notification_reactivated": "🔄 Die Benachrichtigung für {species} in {regions} wurde reaktiviert",
     "species_not_found": "❌ Art nicht gefunden",
     "invalid_regions": "❌ Ungültige Regionen. Verfügbare: {regions}",
     "invalid_ids": "❌ Ungültige IDs angegeben",
@@ -44,17 +44,17 @@
     "testnotification_dm": "📨 Testnachricht erfolgreich!",
     "testnotification_forbidden": "❌ Konnte keine PN senden – bitte Privatnachrichten aktivieren",
     "availability_header": "🔔 **Verfügbarkeitsalarm** für {species}!",
-    "availability_entry": "🏪 **Shop:** {shop} \n💶 **Preisspanne:** {min_price}-{max_price}{currency} \n🔗 [Produktlink](<{product_url}>) | 🏠 [Shop-Startseite](<{shop_url}>)",
+    "availability_entry": "🏪 **Shop:** {shop} - [AAM-Rating](<https://discord.com/channels/375031723601297409/1281916830453203016>): {rating} \n💶 **Preisspanne:** {min_price}-{max_price}{currency} \n🔗 [Produktlink](<{product_url}>) | 🏠 [Shop-Startseite](<{shop_url}>)",
     "all_channels": "alle Kanäle",
-	"notification_expired_dm": "Deine Suche nach {species} ({regions}) ist abgelaufen und wird nicht mehr überwacht. Du kannst jederzeit eine neue Benachrichtigung anlegen.",
-	"dm_failed": "Ich konnte dir keine private Nachricht senden. Bitte aktiviere deine Direktnachrichten, damit du Benachrichtigungen erhalten kannst!",
-	"shop_not_found": "Shop nicht gefunden!",
+    "notification_expired_dm": "Deine Suche nach {species} ({regions}) ist abgelaufen und wird nicht mehr überwacht. Du kannst jederzeit eine neue Benachrichtigung anlegen.",
+    "dm_failed": "Ich konnte dir keine private Nachricht senden. Bitte aktiviere deine Direktnachrichten, damit du Benachrichtigungen erhalten kannst!",
+    "shop_not_found": "Shop nicht gefunden!",
     "blacklist_add_success": "Shop {shop} wurde zur Blacklist hinzugefügt.",
     "blacklist_remove_success": "Shop {shop} wurde von der Blacklist entfernt.",
     "blacklist_empty": "Deine Blacklist ist leer.",
     "blacklist_list": "Gesperrte Shops:\n- {shops}",
-	"shop_not_found_suggest": "Shop '{shop}' nicht gefunden. Meintest du:\n{suggestions}",
+    "shop_not_found_suggest": "Shop '{shop}' nicht gefunden. Meintest du:\n{suggestions}",
     "shop_not_in_blacklist": "Dieser Shop befindet sich nicht in deiner Blacklist",
-    "available_shops": "Verfügbare Shops:\n- {shops}",
+    "available_shops": "Verfügbare Shops & [AAM-Rating](<https://discord.com/channels/375031723601297409/1281916830453203016>):\n- {shops}",
     "general_error": "❌ Ein Fehler ist aufgetreten"
 }
