--- a/locales/eo.json
+++ b/locales/eo.json
@@ -5,8 +5,8 @@
     "notification_set": "🔔 Sciigo pri {species} en {regions} agordita.",
     "notification_set_forced": "⚠️ Sciigo pri {species} (Deviga reĝimo) agordita.",
     "notification_exists": "❌ Ĉi tiu sciigo jam ekzistas.",
-	"notification_exists_active": "❌ Vi jam havas aktivan sciigon por {species} en {regions}",
-	"notification_reactivated": "🔄 La sciigo por {species} en {regions} estis reaktivigita",
+    "notification_exists_active": "❌ Vi jam havas aktivan sciigon por {species} en {regions}",
+    "notification_reactivated": "🔄 La sciigo por {species} en {regions} estis reaktivigita",
     "species_not_found": "❌ Specio ne trovita.",
     "invalid_regions": "❌ Nevalidaj regionoj. Haveblaj: {regions}.",
     "invalid_ids": "❌ Nevalidaj ID-oj indikitaj.",
@@ -44,17 +44,17 @@
     "testnotification_dm": "📨 Testmesaĝo sukcesa!",
     "testnotification_forbidden": "❌ Ne eblis sendi PN – bonvolu aktivigi privatajn mesaĝojn",
     "availability_header": "🔔 **Disponebleca alarmo** por {species}!",
-    "availability_entry": "🏪 **Butiko:** {shop} \n💶 **Prezintervalo:** {min_price}-{max_price}{currency} \n🔗 [Produkto-ligilo](<{product_url}>) | 🏠 [Butiko-ĉefpaĝo](<{shop_url}>)",
+    "availability_entry": "🏪 **Butiko:** {shop} - [AAM-Rating](<https://discord.com/channels/375031723601297409/1281916830453203016>): {rating} \n💶 **Prezintervalo:** {min_price}-{max_price}{currency} \n🔗 [Produkto-ligilo](<{product_url}>) | 🏠 [Butiko-ĉefpaĝo](<{shop_url}>)",
     "all_channels": "ĉiuj kanaloj",
-	"notification_expired_dm": "Via serĉo pri {species} ({regions}) eksvalidiĝis kaj ne plu estas kontrolata. Vi povas iam ajn krei novan sciigon.",
-	"dm_failed": "Mi ne povis sendi al vi privatan mesaĝon. Bonvolu ebligi viajn rektajn mesaĝojn por ricevi sciigojn!",
-	"shop_not_found": "Butiko ne trovita!",
+    "notification_expired_dm": "Via serĉo pri {species} ({regions}) eksvalidiĝis kaj ne plu estas kontrolata. Vi povas iam ajn krei novan sciigon.",
+    "dm_failed": "Mi ne povis sendi al vi privatan mesaĝon. Bonvolu ebligi viajn rektajn mesaĝojn por ricevi sciigojn!",
+    "shop_not_found": "Butiko ne trovita!",
     "blacklist_add_success": "Butiko {shop} aldonita al la nigralisto.",
     "blacklist_remove_success": "Butiko {shop} forigita el la nigralisto.",
     "blacklist_empty": "Via nigralisto estas malplena.",
     "blacklist_list": "Blokitaj butikoj:\n- {shops}",
-	"shop_not_found_suggest": "Butiko '{shop}' ne trovita. Ĉu vi celis:\n{suggestions}",
+    "shop_not_found_suggest": "Butiko '{shop}' ne trovita. Ĉu vi celis:\n{suggestions}",
     "shop_not_in_blacklist": "Ĉi tiu butiko ne estas en via nigralisto",
-    "available_shops": "Disponiblaj butikoj:\n- {shops}",
+    "available_shops": "Disponiblaj butikoj & [AAM-Rating](<https://discord.com/channels/375031723601297409/1281916830453203016>):\n- {shops}",
     "general_error": "❌ Okazis eraro"
 }
