--- a/locales/en.json
+++ b/locales/en.json
@@ -5,8 +5,8 @@
     "notification_set": "🔔 Notification for {species} in {regions} set up",
     "notification_set_forced": "⚠️ Notification for {species} (force mode) set up",
     "notification_exists": "❌ This notification already exists",
-	"notification_exists_active": "❌ You already have an active notification for {species} in {regions}",
-	"notification_reactivated": "🔄 Notification for {species} in {regions} was reactivated",
+    "notification_exists_active": "❌ You already have an active notification for {species} in {regions}",
+    "notification_reactivated": "🔄 Notification for {species} in {regions} was reactivated",
     "species_not_found": "❌ Species not found",
     "invalid_regions": "❌ Invalid regions. Available: {regions}",
     "invalid_ids": "❌ Invalid IDs provided",
@@ -24,7 +24,7 @@
     "history_active": "🔄 Active:",
     "history_other": "❓ Other:",
     "history_more_entries": "...and {count} more",
-	"history_entry": "{species} in {regions} (Created: {created}) - [ID: {id}]",
+    "history_entry": "{species} in {regions} (Created: {created}) - [ID: {id}]",
     "history_entry_completed": "{species} in {regions} (Created: {created} | Notified: {notified}) - [ID: {id}]",
     "system_status": "**🤖 Bot Status**\nUptime: {uptime} \n\n**🔍 Database Status:** {integrity} \nTotal notifications: {total} \n\n**📂 Shop Data:**\n {file_status}",
     "system_performance": "**🚀 Performance**\n• ⏳ Latency: `{latency} ms`\n• 🖥️ CPU usage: `{cpu}%`\n• 💾 RAM usage: `{ram}%`\n• 📡 Servers: `{servers}` | 👥 Users: `{users}`\n• ℹ️ System: `{system}`",
@@ -44,17 +44,17 @@
     "testnotification_dm": "📨 Test message successful!",
     "testnotification_forbidden": "❌ Could not send DM – please enable private messages",
     "availability_header": "🔔 **Availability Alert** for {species}!",
-    "availability_entry": "🏪 **Shop:** {shop} \n💶 **Price range:** {min_price}-{max_price}{currency} \n🔗 [Product link](<{product_url}>) | 🏠 [Shop homepage](<{shop_url}>)",
-	"all_channels": "all channels",
-	"notification_expired_dm": "Your search for {species} ({regions}) has expired and is no longer being monitored. You can create a new notification at any time.",
-	"dm_failed": "I couldn't send you a private message. Please enable your direct messages to receive notifications!",
-	"shop_not_found": "Shop not found!",
+    "availability_entry": "🏪 **Shop:** {shop} - [AAM-Rating](<https://discord.com/channels/375031723601297409/1281916830453203016>): {rating} \n💶 **Price range:** {min_price}-{max_price}{currency} \n🔗 [Product link](<{product_url}>) | 🏠 [Shop homepage](<{shop_url}>)",
+    "all_channels": "all channels",
+    "notification_expired_dm": "Your search for {species} ({regions}) has expired and is no longer being monitored. You can create a new notification at any time.",
+    "dm_failed": "I couldn't send you a private message. Please enable your direct messages to receive notifications!",
+    "shop_not_found": "Shop not found!",
     "blacklist_add_success": "Shop {shop} added to blacklist.",
     "blacklist_remove_success": "Shop {shop} removed from blacklist.",
     "blacklist_empty": "Your blacklist is empty.",
     "blacklist_list": "Blacklisted shops:\n- {shops}",
-	"shop_not_found_suggest": "Shop '{shop}' not found. Did you mean:\n{suggestions}",
+    "shop_not_found_suggest": "Shop '{shop}' not found. Did you mean:\n{suggestions}",
     "shop_not_in_blacklist": "This shop is not in your blacklist",
-    "available_shops": "Available shops:\n- {shops}",
+    "available_shops": "Available shops & [AAM-Rating](<https://discord.com/channels/375031723601297409/1281916830453203016>):\n- {shops}",
     "general_error": "❌ An error has occurred"
 }
