--- a/locales/de.json
+++ b/locales/de.json
@@ -26,7 +26,7 @@
     "history_more_entries": "...und {count} weitere",
     "history_entry": "{species} in {regions} (Erstellt: {created}) - [ID: {id}]",
     "history_entry_completed": "{species} in {regions} (Erstellt: {created} | Benachrichtigt: {notified}) - [ID: {id}]",
-    "system_status": "**🤖 Bot-Status**\nUptime: {uptime} \n\n**🔍 Datenbankstatus:** {integrity} \nGesamte Benachrichtigungen: {total} \n\n**📂 Shop-Daten:**\n {file_status}",
+    "system_status": "**🤖 Bot-Status**\nUptime: {uptime}\n{server_count} server with {user_count} users \n\n**🔍 Datenbankstatus:** {integrity} \nGesamte Benachrichtigungen: {total} \n\n**📂 Shop-Daten:**\n {file_status}",
     "system_performance": "**🚀 Performance**\n• ⏳ Latenz: `{latency} ms`\n• 🖥️ CPU-Auslastung: `{cpu}%`\n• 💾 RAM-Auslastung: `{ram}%`\n• 📡 Server: `{servers}` | 👥 Nutzer: `{users}`\n• ℹ️ System: `{system}`",
     "system_file_status": "🔄 Datei zuletzt aktualisiert: {modified} (vor {age})",
     "system_file_missing": "❌ Datei nicht gefunden",
@@ -44,7 +44,7 @@
     "testnotification_dm": "📨 Testnachricht erfolgreich!",
     "testnotification_forbidden": "❌ Konnte keine PN senden – bitte Privatnachrichten aktivieren",
     "availability_header": "🔔 **Verfügbarkeitsalarm** für {species}!",
-    "availability_entry": "🏪 **Shop:** {shop} - [AAM-Rating](<https://discord.com/channels/375031723601297409/1281916830453203016>): {rating} \n💶 **Preisspanne:** {min_price}-{max_price}{currency} \n🔗 [Produktlink](<{product_url}>) | 🏠 [Shop-Startseite](<{shop_url}>)",
+    "availability_entry": "🏪 **Shop:** {shop} - [AAM-Rating](<https://docs.google.com/spreadsheets/d/1Ymc8M5GHwfKbdh0QMRhZhL5zUK2wMRua0vk6v1MxiYE/edit?usp=sharing>): {rating} \n💶 **Preisspanne:** {min_price}-{max_price}{currency} \n🔗 [Produktlink](<{product_url}>) | 🏠 [Shop-Startseite](<{shop_url}>)",
     "all_channels": "alle Kanäle",
     "notification_expired_dm": "Deine Suche nach {species} ({regions}) ist abgelaufen und wird nicht mehr überwacht. Du kannst jederzeit eine neue Benachrichtigung anlegen.",
     "dm_failed": "Ich konnte dir keine private Nachricht senden. Bitte aktiviere deine Direktnachrichten, damit du Benachrichtigungen erhalten kannst!",
@@ -55,7 +55,7 @@
     "blacklist_list": "Gesperrte Shops:\n- {shops}",
     "shop_not_found_suggest": "Shop '{shop}' nicht gefunden. Meintest du:\n{suggestions}",
     "shop_not_in_blacklist": "Dieser Shop befindet sich nicht in deiner Blacklist",
-    "available_shops": "Verfügbare Shops & [AAM-Rating](<https://discord.com/channels/375031723601297409/1281916830453203016>):\n- {shops}",
+    "available_shops": "Verfügbare Shops & [AAM-Rating](<https://docs.google.com/spreadsheets/d/1Ymc8M5GHwfKbdh0QMRhZhL5zUK2wMRua0vk6v1MxiYE/edit?usp=sharing>):\n- {shops}",
     "checking_availability": "🔍 Prüfe sofort auf Verfügbarkeit von {species}...",
     "shopmapping_add_invalid_id": "❌ Ungültige Shop-ID.",
     "shopmapping_add_success": "✅ Zuordnung hinzugefügt:\n`{external}` → `{id}` ({shop})",
@@ -67,5 +67,16 @@
     "shopmapping_remove_none": "ℹ️ Keine Zuordnung gefunden.",
     "help_reloadshops": "/reloadshops — Shop-Daten aus der JSON-Datei neu laden",
     "help_shopmapping": "/shopmapping — Shopnamen-Zuordnungen für Google Sheets-Importe verwalten!",
+    "serverlist_id": "🆔 ID",
+    "serverlist_members": "👥 Mitglieder",
+    "serverlist_icon": "🖼️ Icon",
+    "serverlist_no_icon": "🚫 Kein Icon",
+    "serverlist_splash": "🌊 Splash-Bild",
+    "serverlist_no_splash": "🚫 Kein Splash-Bild",
+    "serverlist_banner": "🏳️ Banner",
+    "serverlist_no_banner": "🚫 Kein Banner",
+    "serverlist_description": "📝 Beschreibung",
+    "serverlist_no_description": "🚫 Keine Beschreibung",
+    "serverlist_created": "📅 Erstellt am",
     "general_error": "❌ Ein Fehler ist aufgetreten"
 }
