--- a/locales/en.json
+++ b/locales/en.json
@@ -26,7 +26,7 @@
     "history_more_entries": "...and {count} more",
     "history_entry": "{species} in {regions} (Created: {created}) - [ID: {id}]",
     "history_entry_completed": "{species} in {regions} (Created: {created} | Notified: {notified}) - [ID: {id}]",
-    "system_status": "**🤖 Bot Status**\nUptime: {uptime} \n\n**🔍 Database Status:** {integrity} \nTotal notifications: {total} \n\n**📂 Shop Data:**\n {file_status}",
+    "system_status": "**🤖 Bot Status**\nUptime: {uptime}\n{server_count} Server mit {user_count} Usern \n\n**🔍 Database Status:** {integrity} \nTotal notifications: {total} \n\n**📂 Shop Data:**\n {file_status}",
     "system_performance": "**🚀 Performance**\n• ⏳ Latency: `{latency} ms`\n• 🖥️ CPU usage: `{cpu}%`\n• 💾 RAM usage: `{ram}%`\n• 📡 Servers: `{servers}` | 👥 Users: `{users}`\n• ℹ️ System: `{system}`",
     "system_file_status": "🔄 File last updated: {modified} (ago: {age})",
     "system_file_missing": "❌ File not found",
@@ -44,7 +44,7 @@
     "testnotification_dm": "📨 Test message successful!",
     "testnotification_forbidden": "❌ Could not send DM – please enable private messages",
     "availability_header": "🔔 **Availability Alert** for {species}!",
-    "availability_entry": "🏪 **Shop:** {shop} - [AAM-Rating](<https://discord.com/channels/375031723601297409/1281916830453203016>): {rating} \n💶 **Price range:** {min_price}-{max_price}{currency} \n🔗 [Product link](<{product_url}>) | 🏠 [Shop homepage](<{shop_url}>)",
+    "availability_entry": "🏪 **Shop:** {shop} - [AAM-Rating](<https://docs.google.com/spreadsheets/d/1Ymc8M5GHwfKbdh0QMRhZhL5zUK2wMRua0vk6v1MxiYE/edit?usp=sharing>): {rating} \n💶 **Price range:** {min_price}-{max_price}{currency} \n🔗 [Product link](<{product_url}>) | 🏠 [Shop homepage](<{shop_url}>)",
     "all_channels": "all channels",
     "notification_expired_dm": "Your search for {species} ({regions}) has expired and is no longer being monitored. You can create a new notification at any time.",
     "dm_failed": "I couldn't send you a private message. Please enable your direct messages to receive notifications!",
@@ -55,7 +55,7 @@
     "blacklist_list": "Blacklisted shops:\n- {shops}",
     "shop_not_found_suggest": "Shop '{shop}' not found. Did you mean:\n{suggestions}",
     "shop_not_in_blacklist": "This shop is not in your blacklist",
-    "available_shops": "Available shops & [AAM-Rating](<https://discord.com/channels/375031723601297409/1281916830453203016>):\n- {shops}",
+    "available_shops": "Available shops & [AAM-Rating](<https://docs.google.com/spreadsheets/d/1Ymc8M5GHwfKbdh0QMRhZhL5zUK2wMRua0vk6v1MxiYE/edit?usp=sharing>):\n- {shops}",
     "checking_availability": "🔍 Checking immediate availability for {species}...",
     "shopmapping_add_invalid_id": "❌ Invalid shop ID.",
     "shopmapping_add_success": "✅ Mapping added:\n`{external}` → `{id}` ({shop})",
@@ -67,5 +67,16 @@
     "shopmapping_remove_none": "ℹ️ No mapping found.",
 	"help_reloadshops": "/reloadshops — Reload shop data from JSON file",
     "help_shopmapping": "/shopmapping — Manage shop name mappings for Google Sheets imports!",
+    "serverlist_id": "🆔 ID",
+    "serverlist_members": "👥 Members",
+    "serverlist_icon": "🖼️ Icon",
+    "serverlist_no_icon": "🚫 No icon",
+    "serverlist_splash": "🌊 Splash",
+    "serverlist_no_splash": "🚫 No splash",
+    "serverlist_banner": "🏳️ Banner",
+    "serverlist_no_banner": "🚫 No banner",
+    "serverlist_description": "📝 Description",
+    "serverlist_no_description": "🚫 No description",
+    "serverlist_created": "📅 Created at",
     "general_error": "❌ An error has occurred"
 }
