--- a/locales/eo.json
+++ b/locales/eo.json
@@ -26,7 +26,7 @@
     "history_more_entries": "...kaj {count} pliaj",
     "history_entry": "{species} en {regions} (Kreita: {created}) - [ID: {id}]",
     "history_entry_completed": "{species} en {regions} (Kreita: {created} | Sciigita: {notified}) - [ID: {id}]",
-    "system_status": "**🤖 Bot-stato**\nUptime: {uptime} \n\n**🔍 Datumbaza stato:** {integrity} \nTotalaj sciigoj: {total} \n\n**📂 Butikaj datumoj:**\n {file_status}",
+    "system_status": "**🤖 Bot-stato**\nUptime: {uptime}\n{server_count} serviloj kun {user_count} uzantoj \n\n**🔍 Datumbaza stato:** {integrity} \nTotalaj sciigoj: {total} \n\n**📂 Butikaj datumoj:**\n {file_status}",
     "system_performance": "**🚀 Prezentado**\n• ⏳ Latenco: `{latency} ms`\n• 🖥️ CPU-uzado: `{cpu}%`\n• 💾 RAM-uzado: `{ram}%`\n• 📡 Serviloj: `{servers}` | 👥 Uzantoj: `{users}`\n• ℹ️ Sistemo: `{system}`",
     "system_file_status": "🔄 Dosiero laste ĝisdatigita: {modified} (antaŭ {age})",
     "system_file_missing": "❌ Dosiero ne trovita",
@@ -44,7 +44,7 @@
     "testnotification_dm": "📨 Testmesaĝo sukcesa!",
     "testnotification_forbidden": "❌ Ne eblis sendi PN – bonvolu aktivigi privatajn mesaĝojn",
     "availability_header": "🔔 **Disponebleca alarmo** por {species}!",
-    "availability_entry": "🏪 **Butiko:** {shop} - [AAM-Rating](<https://discord.com/channels/375031723601297409/1281916830453203016>): {rating} \n💶 **Prezintervalo:** {min_price}-{max_price}{currency} \n🔗 [Produkto-ligilo](<{product_url}>) | 🏠 [Butiko-ĉefpaĝo](<{shop_url}>)",
+    "availability_entry": "🏪 **Butiko:** {shop} - [AAM-Rating](<https://docs.google.com/spreadsheets/d/1Ymc8M5GHwfKbdh0QMRhZhL5zUK2wMRua0vk6v1MxiYE/edit?usp=sharing>): {rating} \n💶 **Prezintervalo:** {min_price}-{max_price}{currency} \n🔗 [Produkto-ligilo](<{product_url}>) | 🏠 [Butiko-ĉefpaĝo](<{shop_url}>)",
     "all_channels": "ĉiuj kanaloj",
     "notification_expired_dm": "Via serĉo pri {species} ({regions}) eksvalidiĝis kaj ne plu estas kontrolata. Vi povas iam ajn krei novan sciigon.",
     "dm_failed": "Mi ne povis sendi al vi privatan mesaĝon. Bonvolu ebligi viajn rektajn mesaĝojn por ricevi sciigojn!",
@@ -55,7 +55,7 @@
     "blacklist_list": "Blokitaj butikoj:\n- {shops}",
     "shop_not_found_suggest": "Butiko '{shop}' ne trovita. Ĉu vi celis:\n{suggestions}",
     "shop_not_in_blacklist": "Ĉi tiu butiko ne estas en via nigralisto",
-    "available_shops": "Disponiblaj butikoj & [AAM-Rating](<https://discord.com/channels/375031723601297409/1281916830453203016>):\n- {shops}",
+    "available_shops": "Disponiblaj butikoj & [AAM-Rating](<https://docs.google.com/spreadsheets/d/1Ymc8M5GHwfKbdh0QMRhZhL5zUK2wMRua0vk6v1MxiYE/edit?usp=sharing>):\n- {shops}",
     "checking_availability": "🔍 Kontrolas tuj haveblecon de {species}...",
     "shopmapping_add_invalid_id": "❌ Nevalida butiko-ID.",
     "shopmapping_add_success": "✅ Mapado aldonita:\n`{external}` → `{id}` ({shop})",
@@ -67,5 +67,16 @@
     "shopmapping_remove_none": "ℹ️ Neniu mapado trovita.",
     "help_reloadshops": "/reloadshops — Reŝargi butiko-datumojn el JSON-dosiero",
     "help_shopmapping": "/shopmapping — Administri butikonoma mapojn por Google Sheets-importoj!",
+    "serverlist_id": "🆔 ID",
+    "serverlist_members": "👥 Uzantoj",
+    "serverlist_icon": "🖼️ Piktogramo",
+    "serverlist_no_icon": "🚫 Neniu piktogramo",
+    "serverlist_splash": "🌊 Splash-bildo",
+    "serverlist_no_splash": "🚫 Neniu splash-bildo",
+    "serverlist_banner": "🏳️ Standardo",
+    "serverlist_no_banner": "🚫 Neniu standardo",
+    "serverlist_description": "📝 Priskribo",
+    "serverlist_no_description": "🚫 Neniu priskribo",
+    "serverlist_created": "📅 Kreita je",
     "general_error": "❌ Okazis eraro"
 }
